style.css
@import url(./styles/reset.css);
@import url(./styles/variables.css);

:root {
  box-sizing: border-box;
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

body {
  background-color: var(--bg-color);
  font-family: Roboto, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
}

*:focus:not(dialog) {
  outline: 4px solid var(--text-color);
}

.logo {
  font-size: 3rem;
  text-transform: uppercase;
  font-weight: 900;
  margin-bottom: var(--spacing-medium);
}

dialog {
  outline: none;
  top: 0;
  bottom: 0;
  border: none;
  padding: 0;
}

.start-screen {
  padding: 2rem;
  font-size: 1rem;

  background-color: var(--bg-color);
  color: var(--text-color);
  border: 2px solid var(--text-color);

  display: flex;
  flex-direction: column;
  justify-content: space-between;
  gap: 2rem;
}

dialog::backdrop,
dialog::-ms-backdrop {
  background: var(--bg-color);
}

.start-screen__button {
  text-transform: uppercase;
}

.start-screen__options {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
}

.start-screen__options__selection {
  width: 100%;
  text-align: center;
  font-size: 1.2rem;
  text-transform: capitalize;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 0.5rem;
}

.start-screen__options__selection legend {
  font-weight: bold;
  font-size: 1.5rem;
  margin-bottom: var(--spacing-medium);
}

.select {
  background-color: var(--bg-color);
  border: 2px solid var(--text-color);
  padding: 0.8rem;
  width: 100%;
  font-weight: 700;
}

.select:hover {
  cursor: pointer;
}

.select:has(.select__input:checked) {
  background-color: var(--text-color);
  color: var(--bg-color);
}

.select:has(.select__input:focus) {
  outline: 4px solid var(--text-color);
}

.select__input {
  appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;

  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;

  margin: 0;
  padding: 0;
  position: absolute;
}

.button {
  width: 100%;
  flex: 1;
  padding: 1rem;
  font-size: 1.2rem;
  background-color: var(--bg-color);
  color: var(--text-color);
  border: 2px solid var(--text-color);
  font-weight: 700;
}

.button:hover {
  background-color: var(--text-color);
  color: var(--bg-color);
  cursor: pointer;
}

.back-button {
  background-color: transparent;
  border: none;
  padding: 8px;
  position: absolute;
  top: 1rem;
  left: 1rem;
}

.back-button:hover {
  background-color: var(--text-color);
  cursor: pointer;
}

.back-button:hover .back-button__icon {
  color: var(--bg-color);
}

.back-button__icon {
  color: var(--text-color);
}

.wrapper-center-screen {
  display: grid;
  place-content: center;
  align-items: center;
  grid-template-rows: 1fr auto;
  width: 100%;
  min-height: 100vh;
  padding: 1rem;
}

.game-board {
  display: grid;
  background-color: var(--text-color);
  grid-template-columns: repeat(3, minmax(80px, 128px));
  gap: var(--game-board-line-size);
}

.game-board__cell {
  background-color: var(--bg-color);
  color: var(--text-color);
  display: grid;
  place-items: center;
  aspect-ratio: 1/1;
}

.game-board__cell span {
  font-size: 4rem;
}

.game-board__cell:not(.filled):hover {
  background-color: var(--text-color);
  cursor: pointer;
  color: var(--bg-color);
}

.scores-display {
  display: flex;
  padding: 1rem;
  border: 2px solid var(--text-color);
  width: 100%;
  position: fixed;
  bottom: 0;
  align-items: center;
  justify-content: center;
  gap: 2rem;
  color: var(--text-color);
}

.scores-display__player {
  font-size: 2rem;
  text-align: center;
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.scores-display__player__score {
  font-weight: 700;
}

@media (min-width: 750px) {
  .wrapper-center-screen {
    padding-bottom: 2rem;
  }

  .scores-display {
    position: initial;
  }
}

